--- a/Makefile.fpc
+++ b/Makefile.fpc
@@ -684,9 +684,9 @@ endif
 
 innocheck:
 ifndef NODOCS
-# Check for docs-pdf.zip
-ifeq ($(wildcard docs-pdf.zip),)
-        @$(ECHO) "No documentation available. Please copy the file docs-pdf.zip to this directory."
+# Check for doc-pdf.zip
+ifeq ($(wildcard doc-pdf.zip),)
+        @$(ECHO) "No documentation available. Please copy the file doc-pdf.zip to this directory."
         @exit 1
 endif
 endif
@@ -700,7 +700,7 @@ innobuild: innocheck build
         $(DELTREE) $(INNODIR)
         $(MKDIR) $(INNODIR)
 ifndef NODOCS
-        unzip -d $(INNODIR) docs-pdf.zip
+        unzip -d $(INNODIR) doc-pdf.zip
 endif
         $(MAKE) install INSTALL_PREFIX=$(INNODIR)
         compiler/utils/fpcsubst -i install/fpc.ist -o $(INNODIR)/fpc.iss $(FPCISSSUBST)
