* use newly build fpcmake

--- a/install/debian/rules
+++ b/install/debian/rules
@@ -54,9 +54,10 @@ EXAMPLE_TEMP=$(DOC_DIR)/fpc-$(FPCVERSION)
 # Get utils
 NEWPP=$(PWD)/compiler/$(PPNEW)
 NEWFPDOC=$(PWD)/utils/fpdoc/fpdoc
+NEWFPCMAKE=$(PWD)/utils/fpcm/fpcmake
 # Create default options
 BUILDOPTS=PP=$(NEWPP)
-INSTALLOPTS=PP=$(NEWPP) INSTALL_PREFIX=$(INSTALL_DIR)/usr
+INSTALLOPTS=PP=$(NEWPP) FPCMAKE=$(NEWFPCMAKE) INSTALL_PREFIX=$(INSTALL_DIR)/usr
 
 export DH_COMPAT=2
 # export DH_VERBOSE=1
