* shell/awk script to help creating fpmake.pp from existing ppu files
git-svn-id: trunk@9882 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4369,6 +4369,7 @@ packages/fcl-xml/tests/xmlts.pp svneol=native#text/plain
 packages/fpmake.pp svneol=native#text/plain
 packages/fpmkunit/Makefile svneol=native#text/plain
 packages/fpmkunit/Makefile.fpc svneol=native#text/plain
+packages/fpmkunit/examples/ppu2fpmake.sh svneol=native#text/plain
 packages/fpmkunit/fpmake.pp svneol=native#text/plain
 packages/fpmkunit/src/fpmkunit.pp svneol=native#text/plain
 packages/fv/Makefile svneol=native#text/plain
