* Renamed TestSQLFieldTypes.pas to TestFieldTypes.pas for consistency needed by dbdigest
git-svn-id: trunk@9894 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4133,7 +4133,7 @@ packages/fcl-db/tests/memdstoolsunit.pas svneol=native#text/plain
 packages/fcl-db/tests/sqldbtoolsunit.pas -text
 packages/fcl-db/tests/testbasics.pas svneol=native#text/plain
 packages/fcl-db/tests/testdbbasics.pas -text
-packages/fcl-db/tests/testsqlfieldtypes.pas -text
+packages/fcl-db/tests/testfieldtypes.pas svneol=native#text/plain
 packages/fcl-db/tests/toolsunit.pas -text
 packages/fcl-fpcunit/Makefile svneol=native#text/plain
 packages/fcl-fpcunit/Makefile.fpc svneol=native#text/plain
