* changed byte/word/longbool to be Delphi-compatible (+ similar changes     for qwordbool) + test:     o assigning true to such a variable now sets them to $ff/$ffff/$ffffffff     o these types are now all signed     o converting an integer type to a byte/word/long/qwordbool using an       explicit type cast keeps the integer's original value stored in the       bool, instead of forcing it to ord(true)/ord(false)     (mantis #10233 and #10613, implemented for all architectures, testsuite      tested for ppc32, sparc and x86)   * fixed some places where the rtl depended on longbool(true) having the     value 1   * extended several boolean tests (and adapted some to no longer assume     that byte/word/long/qwordbool(true)=1)   + support for converting to qwordbool in second_int_to_bool for x86, ppc     and sparc
git-svn-id: trunk@9898 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7964,6 +7964,7 @@ tests/webtbs/tw1021.pp svneol=native#text/plain
 tests/webtbs/tw10210.pp svneol=native#text/plain
 tests/webtbs/tw10224.pp svneol=native#text/plain
 tests/webtbs/tw1023.pp svneol=native#text/plain
+tests/webtbs/tw10233.pp svneol=native#text/plain
 tests/webtbs/tw10320.pp svneol=native#text/plain
 tests/webtbs/tw10350.pp svneol=native#text/plain
 tests/webtbs/tw10371.pp svneol=native#text/plain
