* move uriparser to fcl-base   * move netdb unit and examples to fcl-net   * removed netdb package
git-svn-id: trunk@9909 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -728,8 +728,6 @@ packages/base/dbus/dbus_arch_deps.inc svneol=native#text/plain
 packages/base/dbus/example/Makefile svneol=native#text/plain
 packages/base/dbus/example/Makefile.fpc svneol=native#text/plain
 packages/base/dbus/example/busexample.pp svneol=native#text/plain
-packages/base/fpmake.inc svneol=native#text/plain
-packages/base/fpmake.pp svneol=native#text/plain
 packages/base/gdbint/Makefile svneol=native#text/plain
 packages/base/gdbint/Makefile.fpc svneol=native#text/plain
 packages/base/gdbint/fpmake.inc svneol=native#text/plain
@@ -1210,24 +1208,6 @@ packages/base/mysql/ver323/mysqls.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_com.pp svneol=native#text/plain
 packages/base/mysql/ver40/mysql_version.pp svneol=native#text/plain
-packages/base/netdb/Makefile svneol=native#text/plain
-packages/base/netdb/Makefile.fpc svneol=native#text/plain
-packages/base/netdb/README -text
-packages/base/netdb/cnetdb.pp svneol=native#text/plain
-packages/base/netdb/fpmake.inc svneol=native#text/plain
-packages/base/netdb/fpmake.pp svneol=native#text/plain
-packages/base/netdb/hs.inc svneol=native#text/plain
-packages/base/netdb/hsh.inc svneol=native#text/plain
-packages/base/netdb/ip6test.pp svneol=native#text/plain
-packages/base/netdb/netdb.pp svneol=native#text/plain
-packages/base/netdb/testdns.pp svneol=native#text/plain
-packages/base/netdb/testhosts.pp svneol=native#text/plain
-packages/base/netdb/testhst.pp svneol=native#text/plain
-packages/base/netdb/testnet.pp svneol=native#text/plain
-packages/base/netdb/testproto.pp svneol=native#text/plain
-packages/base/netdb/testsvc.pp svneol=native#text/plain
-packages/base/netdb/testuri.pp svneol=native#text/plain
-packages/base/netdb/uriparser.pp svneol=native#text/plain
 packages/base/odbc/Makefile svneol=native#text/plain
 packages/base/odbc/Makefile.fpc svneol=native#text/plain
 packages/base/odbc/README -text
@@ -3843,6 +3823,7 @@ packages/fcl-base/src/streamio.pp svneol=native#text/plain
 packages/fcl-base/src/syncobjs.pp svneol=native#text/plain
 packages/fcl-base/src/unix/daemonapp.inc svneol=native#text/plain
 packages/fcl-base/src/unix/eventlog.inc svneol=native#text/plain
+packages/fcl-base/src/uriparser.pp svneol=native#text/plain
 packages/fcl-base/src/wformat.pp svneol=native#text/plain
 packages/fcl-base/src/whtml.pp svneol=native#text/plain
 packages/fcl-base/src/win/ServiceManager.pas -text
@@ -4036,6 +4017,7 @@ packages/fcl-db/tests/testfieldtypes.pas svneol=native#text/plain
 packages/fcl-db/tests/toolsunit.pas -text
 packages/fcl-fpcunit/Makefile svneol=native#text/plain
 packages/fcl-fpcunit/Makefile.fpc svneol=native#text/plain
+packages/fcl-fpcunit/fpmake.pp svneol=native#text/plain
 packages/fcl-fpcunit/src/DUnitCompatibleInterface.inc svneol=native#text/plain
 packages/fcl-fpcunit/src/README.txt svneol=native#text/plain
 packages/fcl-fpcunit/src/demo/consolerunner/suiteconfig.pp svneol=native#text/plain
@@ -4143,13 +4125,28 @@ packages/fcl-json/tests/testjsondata.pp svneol=native#text/plain
 packages/fcl-json/tests/testjsonparser.pp svneol=native#text/plain
 packages/fcl-net/Makefile svneol=native#text/plain
 packages/fcl-net/Makefile.fpc svneol=native#text/plain
-packages/fcl-net/src/fpmake.inc svneol=native#text/plain
-packages/fcl-net/src/fpmake.pp svneol=native#text/plain
+packages/fcl-net/README svneol=native#text/plain
+packages/fcl-net/examples/Makefile svneol=native#text/plain
+packages/fcl-net/examples/Makefile.fpc svneol=native#text/plain
+packages/fcl-net/examples/ip6test.pp svneol=native#text/plain
+packages/fcl-net/examples/readme.txt svneol=native#text/plain
+packages/fcl-net/examples/rpccli.pp svneol=native#text/plain
+packages/fcl-net/examples/rpcserv.pp svneol=native#text/plain
+packages/fcl-net/examples/svrclass.pp svneol=native#text/plain
+packages/fcl-net/examples/svrclass_xmlrpc.pp svneol=native#text/plain
+packages/fcl-net/examples/testdns.pp svneol=native#text/plain
+packages/fcl-net/examples/testhosts.pp svneol=native#text/plain
+packages/fcl-net/examples/testhst.pp svneol=native#text/plain
+packages/fcl-net/examples/testnet.pp svneol=native#text/plain
+packages/fcl-net/examples/testproto.pp svneol=native#text/plain
+packages/fcl-net/examples/testsvc.pp svneol=native#text/plain
+packages/fcl-net/examples/testuri.pp svneol=native#text/plain
 packages/fcl-net/src/fpsock.pp svneol=native#text/plain
 packages/fcl-net/src/httpbase.pp svneol=native#text/plain
 packages/fcl-net/src/httpclient.pp svneol=native#text/plain
 packages/fcl-net/src/httpsvlt.pp svneol=native#text/plain
 packages/fcl-net/src/mkxmlrpc.pp svneol=native#text/plain
+packages/fcl-net/src/netdb.pp svneol=native#text/plain
 packages/fcl-net/src/netware/resolve.inc svneol=native#text/plain
 packages/fcl-net/src/netwlibc/resolve.inc svneol=native#text/plain
 packages/fcl-net/src/os2/resolve.inc svneol=native#text/plain
@@ -4160,13 +4157,6 @@ packages/fcl-net/src/unix/resolve.inc svneol=native#text/plain
 packages/fcl-net/src/win/resolve.inc svneol=native#text/plain
 packages/fcl-net/src/wince/resolve.inc svneol=native#text/plain
 packages/fcl-net/src/xmlrpc.pp svneol=native#text/plain
-packages/fcl-net/tests/Makefile svneol=native#text/plain
-packages/fcl-net/tests/Makefile.fpc svneol=native#text/plain
-packages/fcl-net/tests/readme.txt svneol=native#text/plain
-packages/fcl-net/tests/rpccli.pp svneol=native#text/plain
-packages/fcl-net/tests/rpcserv.pp svneol=native#text/plain
-packages/fcl-net/tests/svrclass.pp svneol=native#text/plain
-packages/fcl-net/tests/svrclass_xmlrpc.pp svneol=native#text/plain
 packages/fcl-passrc/Makefile svneol=native#text/plain
 packages/fcl-passrc/Makefile.fpc svneol=native#text/plain
 packages/fcl-passrc/src/fpmake.inc svneol=native#text/plain
