--- a/.gitattributes
+++ b/.gitattributes
@@ -4226,6 +4226,7 @@ packages/fcl-web/src/websession.pp svneol=native#text/plain
 packages/fcl-web/src/webutil.pp svneol=native#text/plain
 packages/fcl-xml/Makefile svneol=native#text/plain
 packages/fcl-xml/Makefile.fpc svneol=native#text/plain
+packages/fcl-xml/fpmake.pp svneol=native#text/plain
 packages/fcl-xml/src/README -text
 packages/fcl-xml/src/dom.pp svneol=native#text/plain
 packages/fcl-xml/src/dom_html.pp svneol=native#text/plain
